FR XML assets from LSO

--- a/l10n/ses/fr-fr/xml/admin_about.xml
+++ b/l10n/ses/fr-fr/xml/admin_about.xml
@@ -114,7 +114,7 @@
     </varlistentry>
    </variablelist>
    <para>
-    <systemitem class="library">librados</systemitem> est utilisé par Object Gateway et les RBD alors que CephFS s&apos;interface directement avec RADOS <xref linkend="storage-intro-core-rados-figure"/>.
+    <systemitem class="library">librados</systemitem> est utilisé par Object Gateway et les RBD alors que CephFS s&apos;interface directement avec RADOS (<xref linkend="storage-intro-core-rados-figure"/>).
    </para>
    <figure xml:id="storage-intro-core-rados-figure">
     <title>Interfaces avec la zone de stockage des objets Ceph</title>
