--- a/l10n/ses/fr-fr/xml/admin_ceph_gateway.xml
+++ b/l10n/ses/fr-fr/xml/admin_ceph_gateway.xml
@@ -72,7 +72,7 @@
   <title>Déploiement de la passerelle Object Gateway</title>
 
   <para>
-   Le déploiement de la passerelle Ceph Object Gateway suit la même procédure que le déploiement des autres services Ceph, à l&apos;aide de cephdm. Pour plus de détails, reportez-vous au document <xref linkend="cephadm-service-and-placement-specs"/>, en particulier au document <xref linkend="deploy-cephadm-day2-service-ogw"/>.
+   Le déploiement de la passerelle Ceph Object Gateway suit la même procédure que le déploiement des autres services Ceph, à l&apos;aide de cephdm. Pour plus de détails, reportez-vous au <xref linkend="cephadm-service-and-placement-specs"/>, en particulier au <xref linkend="deploy-cephadm-day2-service-ogw"/>.
   </para>
  </sect1>
  <sect1 xml:id="ceph-rgw-operating">
