--- a/l10n/ses/fr-fr/xml/admin_ceph_upgrade.xml
+++ b/l10n/ses/fr-fr/xml/admin_ceph_upgrade.xml
@@ -16,7 +16,7 @@
  <itemizedlist>
   <listitem>
    <para>
-    Mise à niveau de Ceph Nautilus vers Pacific.
+    mise à niveau de Ceph Nautilus vers Pacific ;
    </para>
   </listitem>
   <listitem>
@@ -99,7 +99,7 @@
     </listitem>
     <listitem>
      <para>
-      Lisez le <xref linkend="ses-deployment"/> pour vous familiariser avec <systemitem class="resource">ceph-salt</systemitem> et l&apos;orchestrateur Ceph, et en particulier prendre connaissance des informations sur les spécifications de service.
+      Lisez la <xref linkend="ses-deployment"/> pour vous familiariser avec <systemitem class="resource">ceph-salt</systemitem> et l&apos;orchestrateur Ceph, et en particulier prendre connaissance des informations sur les spécifications de service.
      </para>
     </listitem>
     <listitem>
@@ -176,7 +176,7 @@
 <screen><prompt role="root"># </prompt>zypper refresh &amp;&amp; zypper patch</screen>
    <tip>
     <para>
-     Reportez-vous à <link xlink:href="https://documentation.suse.com/ses/6/html/ses-all/storage-salt-cluster.html#deepsea-rolling-updates"/> pour obtenir des informations détaillées sur la mise à jour des noeuds de grappe.
+     Reportez-vous au site <link xlink:href="https://documentation.suse.com/ses/6/html/ses-all/storage-salt-cluster.html#deepsea-rolling-updates"/> pour obtenir des informations détaillées sur la mise à jour des noeuds de grappe.
     </para>
    </tip>
    <para>
@@ -215,7 +215,7 @@
    <sect3 xml:id="verify-previous-upgrade-patch-repos-repos">
     <title>Dépôts logiciels</title>
     <para>
-     Si tous les noeuds sont enregistrés auprès de SCC, vous pouvez utiliser la commande <command>zypper migration</command> pour effectuer la mise à niveau. Pour plus d&apos;informations, consultez <link xlink:href="https://documentation.suse.com/sles/15-SP3/html/SLES-all/cha-upgrade-online.html#sec-upgrade-online-zypper"/>.
+     Si tous les noeuds sont enregistrés auprès de SCC, vous pouvez utiliser la commande <command>zypper migration</command> pour effectuer la mise à niveau. Pour plus d&apos;informations, consultez le site <link xlink:href="https://documentation.suse.com/sles/15-SP3/html/SLES-all/cha-upgrade-online.html#sec-upgrade-online-zypper"/>.
     </para>
     <para>
      Si les noeuds ne sont <emphasis role="bold">pas</emphasis> enregistrés auprès de SCC, désactivez tous les dépôts logiciels existants et ajoutez les dépôts <literal>Pool</literal> et <literal>Updates</literal> pour chacune des extensions suivantes :
