--- a/l10n/ses/fr-fr/xml/admin_ds_backup.xml
+++ b/l10n/ses/fr-fr/xml/admin_ds_backup.xml
@@ -16,7 +16,7 @@
   <sect2 xml:id="backrest-ceph-cephsalt">
    <title>Sauvegarde de la configuration de <systemitem class="resource">ceph-salt</systemitem></title>
    <para>
-    Exportez la configuration de la grappe. Pour plus d&apos;informations, reportez-vous au document <xref linkend="deploy-cephadm-configure-export"/>.
+    Exportez la configuration de la grappe. Pour plus d&apos;informations, reportez-vous au <xref linkend="deploy-cephadm-configure-export"/>.
    </para>
   </sect2>
 
@@ -103,12 +103,12 @@
   <orderedlist>
    <listitem>
     <para>
-     Réinstallez le noeud. Pour plus d&apos;informations, reportez-vous au document <xref linkend="deploy-sles"/>
+     Réinstallez le noeud. Pour plus d&apos;informations, reportez-vous au <xref linkend="deploy-sles"/>
     </para>
    </listitem>
    <listitem>
     <para>
-     Installez Salt. Pour plus d&apos;informations, reportez-vous au document <xref linkend="deploy-salt"/>
+     Installez Salt. Pour plus d&apos;informations, reportez-vous au <xref linkend="deploy-salt"/>
     </para>
    </listitem>
    <listitem>
@@ -138,7 +138,7 @@
    </listitem>
    <listitem>
     <para>
-     Importez la configuration de la grappe à partir du fichier JSON exporté précédemment. Pour plus d&apos;informations, reportez-vous au document <xref linkend="deploy-cephadm-configure-export"/>.
+     Importez la configuration de la grappe à partir du fichier JSON exporté précédemment. Pour plus d&apos;informations, reportez-vous au <xref linkend="deploy-cephadm-configure-export"/>.
     </para>
    </listitem>
    <listitem>
