--- a/l10n/ses/fr-fr/xml/admin_monitoring_alerting.xml
+++ b/l10n/ses/fr-fr/xml/admin_monitoring_alerting.xml
@@ -398,7 +398,7 @@ spec:
 </screen>
 
   <para>
-   Vous pouvez également utiliser Ceph Dashboard pour déployer le service de passerelle SNMP pour SNMPv2c et SNMPv3. Pour plus d&apos;informations, reportez-vous à la page <xref linkend="dashboard-cluster-services"/>.
+   Vous pouvez également utiliser Ceph Dashboard pour déployer le service de passerelle SNMP pour SNMPv2c et SNMPv3. Pour plus d&apos;informations, reportez-vous à la <xref linkend="dashboard-cluster-services"/>.
   </para>
  </sect1>
 </chapter>
