--- a/l10n/ses/fr-fr/xml/admin_nfsganesha.xml
+++ b/l10n/ses/fr-fr/xml/admin_nfsganesha.xml
@@ -75,7 +75,7 @@
 
   <important>
    <para>
-    Le démarrage du service NFS Ganesha n&apos;exporte pas automatiquement un système de fichiers CephFS. Pour exporter un système de fichiers CephFS, créez un fichier de configuration d&apos;exportation. Pour plus d&apos;informations, reportez-vous au <xref linkend="ceph-nfsganesha-create-export"/>.
+    Le démarrage du service NFS Ganesha n&apos;exporte pas automatiquement un système de fichiers CephFS. Pour exporter un système de fichiers CephFS, créez un fichier de configuration d&apos;exportation. Pour plus d&apos;informations, reportez-vous à la <xref linkend="ceph-nfsganesha-create-export"/>.
    </para>
   </important>
 
