--- a/l10n/ses/fr-fr/xml/admin_rbd.xml
+++ b/l10n/ses/fr-fr/xml/admin_rbd.xml
@@ -702,7 +702,7 @@ data blocks changed from 2097152 to 2560000</screen>
       <term>image</term>
       <listitem>
        <para>
-        La mise en miroir doit être explicitement activée sur chaque image. Pour plus d&apos;informations, reportez-vous au <xref linkend="rbd-mirror-enable-image-mirroring"/>.
+        La mise en miroir doit être explicitement activée sur chaque image. Pour plus d&apos;informations, reportez-vous à la <xref linkend="rbd-mirror-enable-image-mirroring"/>.
        </para>
       </listitem>
      </varlistentry>
