--- a/l10n/ses/fr-fr/xml/admin_saltcluster.xml
+++ b/l10n/ses/fr-fr/xml/admin_saltcluster.xml
@@ -1199,7 +1199,7 @@ OSD_ID  HOST         STATE                    PG_COUNT  REPLACE  FORCE  STARTED_
    </step>
    <step>
     <para>
-     Incluez le nouveau Salt Master dans la grappe comme décrit dans les <xref linkend="deploy-cephadm-cephsalt"/>, <xref linkend="deploy-cephadm-configure-minions"/> et <xref linkend="deploy-cephadm-configure-admin"/>.
+     Incluez le nouveau Salt Master dans la grappe comme décrit dans le <xref linkend="deploy-cephadm-cephsalt"/>, le <xref linkend="deploy-cephadm-configure-minions"/> et le <xref linkend="deploy-cephadm-configure-admin"/>.
     </para>
    </step>
    <step>
