--- a/l10n/ses/fr-fr/xml/common_intro_convention.xml
+++ b/l10n/ses/fr-fr/xml/common_intro_convention.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<sect1 xmlns="http://docbook.org/ns/docbook" xmlns:xi="http://www.w3.org/2001/XInclude" xmlns:xlink="http://www.w3.org/1999/xlink" xml:base="common_intro_convention.xml" xml:lang="fr" version="5.1">
+<sect1 xmlns="http://docbook.org/ns/docbook" xmlns:xi="http://www.w3.org/2001/XInclude" xmlns:xlink="http://www.w3.org/1999/xlink" xml:base="common_intro_convention.xml" xml:lang="en" version="5.1">
  <title>Conventions relatives à la documentation</title>
 
  <info>
@@ -39,7 +39,7 @@
   </listitem>
   <listitem>
    <para>
-    <package>package_name</package>: nom d&apos;un paquetage logiciel
+    <package>package_name</package> : nom d&apos;un paquetage logiciel
    </para>
   </listitem>
   <listitem>
