--- a/l10n/ses/fr-fr/xml/common_intro_prompts.xml
+++ b/l10n/ses/fr-fr/xml/common_intro_prompts.xml
@@ -90,7 +90,7 @@
  <sect2>
   <title>Informations supplémentaires</title>
   <para>
-   Pour plus d&apos;informations sur la gestion des clés Ceph, reportez-vous au <xref linkend="storage-cephx-keymgmt"/>.
+   Pour plus d&apos;informations sur la gestion des clés Ceph, reportez-vous à la <xref linkend="storage-cephx-keymgmt"/>.
   </para>
  </sect2>
 </sect1>
