--- a/l10n/ses/fr-fr/xml/dashboard_users.xml
+++ b/l10n/ses/fr-fr/xml/dashboard_users.xml
@@ -63,21 +63,21 @@
   </figure>
 
   <para>
-   Cliquez sur la petite icône de crayon pour assigner des rôles prédéfinis à l&apos;utilisateur. Confirmez en cliquant sur le bouton <guimenu>Créer Utilisateur</guimenu>.
+   Cliquez sur la petite icône de crayon pour assigner des rôles prédéfinis à l&apos;utilisateur. Confirmez en cliquant sur le bouton <guimenu>Créer un utilisateur</guimenu>.
   </para>
  </sect1>
  <sect1 xml:id="dashboard-editing-users">
   <title>Modification des utilisateurs</title>
 
   <para>
-   Dans le tableau, cliquez sur la ligne d&apos;un utilisateur pour la mettre en surbrillance, puis sélectionnez <guimenu>Modifier</guimenu> pour éditer les détails de l&apos;utilisateur. Confirmez en cliquant sur le bouton <guimenu>Edit User</guimenu> (Modifier l&apos;utilisateur).
+   Dans le tableau, cliquez sur la ligne d&apos;un utilisateur pour la mettre en surbrillance, puis sélectionnez <guimenu>Modifier</guimenu> pour éditer les détails de l&apos;utilisateur. Confirmez en cliquant sur le bouton <guimenu>Modifier l&apos;utilisateur</guimenu>.
   </para>
  </sect1>
  <sect1 xml:id="dashboard-deleting-users">
   <title>Suppression d&apos;utilisateurs</title>
 
   <para>
-   Cliquez sur la ligne d&apos;un utilisateur dans le tableau pour la mettre en surbrillance, puis sélectionnez la zone de liste déroulante en regard de <guimenu>Modifier</guimenu> et sélectionnez <guimenu>Supprimer</guimenu> dans la liste pour supprimer le compte utilisateur. Cochez la case <guimenu>Oui</guimenu> et confirmez avec le bouton <guimenu>Delete User</guimenu> (Supprimer l&apos;utilisateur).
+   Cliquez sur la ligne d&apos;un utilisateur dans le tableau pour la mettre en surbrillance, puis sélectionnez la zone de liste déroulante en regard de <guimenu>Modifier</guimenu> et sélectionnez <guimenu>Supprimer</guimenu> dans la liste pour supprimer le compte utilisateur. Cochez la case <guimenu>Oui</guimenu> et confirmez avec le bouton <guimenu>Supprimer l&apos;utilisateur</guimenu>.
   </para>
  </sect1>
  <sect1 xml:id="dashboard-listing-user-roles">
@@ -158,7 +158,7 @@
   <title>Suppression des rôles personnalisés</title>
 
   <para>
-   Cliquez sur la ligne d&apos;un rôle dans le tableau pour la mettre en surbrillance, puis sélectionnez la zone de liste déroulante en regard de <guimenu>Modifier</guimenu> et sélectionnez <guimenu>Supprimer</guimenu> dans la liste pour supprimer le rôle. Cochez la case <guimenu>Oui</guimenu> et confirmez avec le bouton <guimenu>Delete Role</guimenu> (Supprimer le rôle).
+   Cliquez sur la ligne d&apos;un rôle dans le tableau pour la mettre en surbrillance, puis sélectionnez la zone de liste déroulante en regard de <guimenu>Modifier</guimenu> et sélectionnez <guimenu>Supprimer</guimenu> dans la liste pour supprimer le rôle. Cochez la case <guimenu>Oui</guimenu> et confirmez avec le bouton <guimenu>Supprimer le rôle</guimenu>.
   </para>
  </sect1>
 </chapter>
