--- a/l10n/ses/fr-fr/xml/deploy_bootstrap.xml
+++ b/l10n/ses/fr-fr/xml/deploy_bootstrap.xml
@@ -133,7 +133,7 @@ o- dashboard ....................................................... [...]
     <itemizedlist>
      <listitem>
       <para>
-       Pour laisser le shell terminer un chemin par rapport à votre position actuelle, appuyez deux fois sur la touche TAB.<keycap function="tab"/>
+       Pour laisser le shell terminer un chemin par rapport à votre position actuelle, appuyez deux fois sur la touche TAB <keycap function="tab"/>.
       </para>
      </listitem>
      <listitem>
@@ -161,7 +161,7 @@ o- dashboard ....................................................... [...]
   <sect2 xml:id="deploy-cephadm-configure-minions">
    <title>Ajout de minions Salt</title>
    <para>
-    Incluez tout ou partie des minions Salt que vous avez déployés et acceptés à la <xref linkend="deploy-salt"/> dans la configuration de la grappe Ceph. Vous pouvez spécifier les minions Salt à l&apos;aide de leur nom complet ou utiliser une expression globale « * » et « ? » pour inclure plusieurs minions Salt simultanément. Utilisez la sous-commande <command>add</command> sous le chemin <literal>/ceph_cluster/minions</literal>. La commande suivante inclut tous les minions Salt acceptés :
+    Incluez tout ou partie des minions Salt que vous avez déployés et acceptés au <xref linkend="deploy-salt"/> dans la configuration de la grappe Ceph. Vous pouvez spécifier les minions Salt à l&apos;aide de leur nom complet ou utiliser une expression globale « * » et « ? » pour inclure plusieurs minions Salt simultanément. Utilisez la sous-commande <command>add</command> sous le chemin <literal>/ceph_cluster/minions</literal>. La commande suivante inclut tous les minions Salt acceptés :
    </para>
 <screen><prompt>root@master # </prompt>ceph-salt config /ceph_cluster/minions add '*'</screen>
    <para>
@@ -356,7 +356,7 @@ o- time_server ................................................ [enabled]
    <itemizedlist>
     <listitem>
      <para>
-      Si votre grappe peut accéder au registre par défaut à l&apos;adresse <literal>registration.suse.com</literal> (directement ou via un proxy), vous pouvez faire pointer <systemitem class="resource">ceph-salt</systemitem> directement vers cette URL sans créer de registre local. Continuez en suivant les étapes de la section <xref linkend="deploy-cephadm-configure-imagepath"/>.
+      Si votre grappe peut accéder au registre par défaut à l&apos;adresse <literal>registration.suse.com</literal> (directement ou via un proxy), vous pouvez faire pointer <systemitem class="resource">ceph-salt</systemitem> directement vers cette URL sans créer de registre local. Continuez en suivant les étapes de la <xref linkend="deploy-cephadm-configure-imagepath"/>.
      </para>
     </listitem>
     <listitem>
@@ -610,7 +610,7 @@ skopeo sync --src docker --dest dir registry.suse.com/ses/7.1/ceph/prometheus-al
      </para>
     </important>
     <tip>
-     <title>Configuration du proxy HTTPS</title>
+     <title>configuration du proxy HTTPS</title>
      <para>
       Si vous devez utiliser un proxy pour communiquer avec le serveur de registre de conteneur, effectuez les étapes de configuration suivantes sur tous les noeuds de grappe :
      </para>
