--- a/l10n/ses/fr-fr/xml/deploy_core.xml
+++ b/l10n/ses/fr-fr/xml/deploy_core.xml
@@ -61,7 +61,7 @@ mon       1/0  5m ago     -    &lt;no spec&gt;  registry.example.com/[...]  5bf1
 </screen>
    <tip>
     <para>
-     Vous pouvez limiter la liste aux services d&apos;un noeud en particulier avec le paramètre facultatif <option>-–host</option> et aux services d&apos;un type particulier avec le paramètre facultatif <option>--service-type</option>. Les types acceptables sont <literal>mon</literal>, <literal>osd</literal>, <literal>mgr</literal>, <literal>mds</literal> et <literal>rgw</literal>.
+     Vous pouvez limiter la liste aux services d&apos;un noeud en particulier avec le paramètre facultatif <option>--host</option> et aux services d&apos;un type particulier avec le paramètre facultatif <option>--service-type</option>. Les types acceptables sont <literal>mon</literal>, <literal>osd</literal>, <literal>mgr</literal>, <literal>mds</literal> et <literal>rgw</literal>.
     </para>
    </tip>
    <para>
