--- a/l10n/ses/fr-fr/xml/deployment_admin_ha.xml
+++ b/l10n/ses/fr-fr/xml/deployment_admin_ha.xml
@@ -99,7 +99,7 @@
    </step>
    <step>
     <para>
-     Sur l&apos;invité de la machine virtuelle qui vient d&apos;être créé, déployez le noeud Admin, y compris les services supplémentaires dont vous avez besoin. Suivez les étapes appropriées de la <xref linkend="deploy-salt"/>. En même temps, déployez les noeuds de la grappe Ceph restants sur les serveurs de grappe non-HA.
+     Sur l&apos;invité de la machine virtuelle qui vient d&apos;être créé, déployez le noeud Admin, y compris les services supplémentaires dont vous avez besoin. Suivez les étapes appropriées du <xref linkend="deploy-salt"/>. En même temps, déployez les noeuds de la grappe Ceph restants sur les serveurs de grappe non-HA.
     </para>
    </step>
   </procedure>
