--- a/l10n/ses/fr-fr/xml/deployment_hwrecommend.xml
+++ b/l10n/ses/fr-fr/xml/deployment_hwrecommend.xml
@@ -103,7 +103,7 @@
       <para>
        Redémarrez les OSD pour qu&apos;ils se lient au réseau de grappe spécifié :
       </para>
-<screen><prompt role="root"># </prompt>systemctl restart ceph-*@osd&#x002E;*&#x002E;service</screen>
+<screen><prompt role="root"># </prompt>systemctl restart ceph-*@osd&period;*&period;service</screen>
      </step>
      <step>
       <para>
@@ -484,7 +484,7 @@
       Pour partager le périphérique DB avec le WAL, ne spécifiez <emphasis>pas</emphasis> le périphérique WAL et indiquez uniquement le périphérique DB.
      </para>
      <para>
-      Pour plus d&apos;informations sur la spécification d&apos;une disposition OSD, reportez-vous à la <xref linkend="drive-groups"/>.
+      Pour plus d&apos;informations sur la spécification d&apos;une disposition OSD, reportez-vous au <xref linkend="drive-groups"/>.
      </para>
     </listitem>
    </itemizedlist>
