--- a/l10n/ses/fr-fr/xml/common_intro_support.xml
+++ b/l10n/ses/fr-fr/xml/common_intro_support.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<sect1 xmlns="http://docbook.org/ns/docbook" xmlns:xi="http://www.w3.org/2001/XInclude" xmlns:xlink="http://www.w3.org/1999/xlink" xml:base="common_intro_support.xml" xml:lang="fr" version="5.1">
+<sect1 xmlns="http://docbook.org/ns/docbook" xmlns:xi="http://www.w3.org/2001/XInclude" xmlns:xlink="http://www.w3.org/1999/xlink" xml:base="common_intro_support.xml" xml:lang="en" version="5.1">
  <title>Support</title>
 
  <info>
@@ -9,7 +9,7 @@
  </info>
 
  <para>
-  Vous trouverez ci-dessous la déclaration de support pour SUSE Enterprise et des informations générales sur les avant-premières technologiques. Pour plus d&apos;informations sur le cycle de vie du produit, reportez-vous au <link xlink:href="https://www.suse.com/lifecycle"/>.
+  Vous trouverez ci-dessous la déclaration de support pour SUSE Enterprise Storage et des informations générales sur les avant-premières technologiques. Pour plus d&apos;informations sur le cycle de vie du produit, reportez-vous au site <link xlink:href="https://www.suse.com/lifecycle"/>.
  </para>
  <para>
   Si vous avez droit au support, vous trouverez des instructions détaillées sur la collecte d&apos;informations pour un ticket de support sur le site <link xlink:href="https://documentation.suse.com/sles-15/html/SLES-all/cha-adm-support.html"/>.
