--- a/l10n/ses/fr-fr/xml/dashboard_ogws.xml
+++ b/l10n/ses/fr-fr/xml/dashboard_ogws.xml
@@ -75,7 +75,7 @@ Please consult the documentation on how to configure and enable the Object Gatew
   <sect2 xml:id="dashboard-ogw-user-create">
    <title>Ajout d&apos;un nouvel utilisateur de la passerelle</title>
    <para>
-    Pour ajouter un nouvel utilisateur de la passerelle, cliquez sur <guimenu>Créer</guimenu> en haut à gauche de l&apos;en-tête du tableau. Remplissez les informations d&apos;identification, les détails sur la clé S3 et les quotas utilisateur et de compartiments, puis confirmez en cliquant sur <guimenu>Créer Utilisateur</guimenu>.
+    Pour ajouter un nouvel utilisateur de la passerelle, cliquez sur <guimenu>Créer</guimenu> en haut à gauche de l&apos;en-tête du tableau. Remplissez les informations d&apos;identification, les détails sur la clé S3 et les quotas utilisateur et de compartiments, puis confirmez en cliquant sur <guimenu>Créer un utilisateur</guimenu>.
    </para>
    <figure>
     <title>Ajout d&apos;un nouvel utilisateur de la passerelle</title>
@@ -93,7 +93,7 @@ Please consult the documentation on how to configure and enable the Object Gatew
   <sect2 xml:id="dashboard-ogw-user-delete">
    <title>Suppression d&apos;utilisateurs de la passerelle</title>
    <para>
-    Pour supprimer un utilisateur de la passerelle, sélectionnez-le et mettez-le en surbrillance. Cliquez sur le bouton de liste déroulante en regard de <guimenu>Modifier</guimenu> et sélectionnez <guimenu>Supprimer</guimenu> dans la liste pour supprimer le compte utilisateur. Cochez la case <guimenu>Oui</guimenu> et confirmez avec le bouton <guimenu>Delete User</guimenu> (Supprimer l&apos;utilisateur).
+    Pour supprimer un utilisateur de la passerelle, sélectionnez-le et mettez-le en surbrillance. Cliquez sur le bouton de liste déroulante en regard de <guimenu>Modifier</guimenu> et sélectionnez <guimenu>Supprimer</guimenu> dans la liste pour supprimer le compte utilisateur. Cochez la case <guimenu>Oui</guimenu> et confirmez avec le bouton <guimenu>Supprimer l&apos;utilisateur</guimenu>.
    </para>
   </sect2>
 
@@ -103,7 +103,7 @@ Please consult the documentation on how to configure and enable the Object Gatew
     Pour modifier les détails d&apos;un utilisateur de la passerelle, sélectionnez-le et mettez-le en surbrillance. Cliquez sur <guimenu>Modifier</guimenu> en haut à gauche de l&apos;en-tête du tableau.
    </para>
    <para>
-    Modifiez les informations utilisateur de base ou supplémentaires, telles que les fonctions, clés, utilisateurs secondaires et les détails de quota. Confirmez en cliquant sur le bouton <guimenu>Edit User</guimenu> (Modifier l&apos;utilisateur).
+    Modifiez les informations utilisateur de base ou supplémentaires, telles que les fonctions, clés, utilisateurs secondaires et les détails de quota. Confirmez en cliquant sur le bouton <guimenu>Modifier l&apos;utilisateur</guimenu>.
    </para>
    <para>
     L&apos;onglet <guimenu>Clés</guimenu> comprend une liste en lecture seule des utilisateurs de la passerelle et de leurs clés secrète et d&apos;accès. Pour afficher les clés, cliquez sur un nom d&apos;utilisateur dans la liste, puis sélectionnez <guimenu>Afficher</guimenu> en haut à gauche de l&apos;en-tête du tableau. Dans la boîte de dialogue <guimenu>Clef S3</guimenu>, cliquez sur l&apos;icône en forme d&apos;oeil pour dévoiler les clés, ou cliquez sur l&apos;icône du presse-papiers pour copier la clé associée dans le presse-papiers.
