--- a/l10n/ses/fr-fr/xml/upgrade-to-pacific.xml
+++ b/l10n/ses/fr-fr/xml/upgrade-to-pacific.xml
@@ -16,7 +16,7 @@
  <itemizedlist>
   <listitem>
    <para>
-    Mise à niveau de la version sous-jacente de SUSE Linux Enterprise Server, SUSE Linux Enterprise Server 15 SP2 vers la version SUSE Linux Enterprise Server 15 SP3.
+    Mise à niveau de la version sous-jacente de SUSE Linux Enterprise Server 15 SP2 vers la version SUSE Linux Enterprise Server 15 SP3.
    </para>
   </listitem>
   <listitem>
@@ -71,7 +71,7 @@
     </listitem>
     <listitem>
      <para>
-      Lisez le <xref linkend="ses-deployment"/> pour vous familiariser avec <systemitem class="resource">ceph-salt</systemitem> et l&apos;orchestrateur Ceph, et en particulier prendre connaissance des informations sur les spécifications de service.
+      Lisez la <xref linkend="ses-deployment"/> pour vous familiariser avec <systemitem class="resource">ceph-salt</systemitem> et l&apos;orchestrateur Ceph, et en particulier prendre connaissance des informations sur les spécifications de service.
      </para>
     </listitem>
    </itemizedlist>
@@ -92,7 +92,7 @@
    <sect3 xml:id="verify-previous-upgrade-patch-repos-repos-7p">
     <title>Dépôts logiciels</title>
     <para>
-     Si tous les noeuds sont enregistrés auprès de SCC, vous pouvez utiliser la commande <command>zypper migration</command> pour effectuer la mise à niveau. Pour plus d&apos;informations, consultez <link xlink:href="https://documentation.suse.com/sles/15-SP3/html/SLES-all/cha-upgrade-online.html#sec-upgrade-online-zypper"/>.
+     Si tous les noeuds sont enregistrés auprès de SCC, vous pouvez utiliser la commande <command>zypper migration</command> pour effectuer la mise à niveau. Pour plus d&apos;informations, consultez le site <link xlink:href="https://documentation.suse.com/sles/15-SP3/html/SLES-all/cha-upgrade-online.html#sec-upgrade-online-zypper"/>.
     </para>
     <para>
      Si les noeuds ne sont <emphasis role="bold">pas</emphasis> enregistrés auprès de SCC, désactivez tous les dépôts logiciels existants et ajoutez les dépôts <literal>Pool</literal> et <literal>Updates</literal> pour chacune des extensions suivantes :
@@ -170,7 +170,7 @@
   </para>
 
   <para>
-   Pour plus d&apos;informations sur la mise à niveau de SUSE Linux Enterprise Server à l&apos;aide de <command>zypper</command>, reportez-vous à la documentation .<link xlink:href="https://documentation.suse.com/sles/15-SP3/html/SLES-all/cha-upgrade-online.html#sec-upgrade-online-zypper"/>
+   Pour plus d&apos;informations sur la mise à niveau de SUSE Linux Enterprise Server à l&apos;aide de <command>zypper</command>, reportez-vous à la documentation <link xlink:href="https://documentation.suse.com/sles/15-SP3/html/SLES-all/cha-upgrade-online.html#sec-upgrade-online-zypper"/>.
   </para>
  </sect1>
  <sect1 xml:id="upgrade-ses-packages">
